--- a/public/ei/index.html
+++ b/public/ei/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Ei.</title>
-<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
 <style type="text/css">
 body {
     background-color: #e8e8e8;
@@ -73,7 +73,7 @@ body {
 <div class="fullscreenDiv">
 	<p id="ei" class="center fade">Ei.</p>
 </div>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script>
 $(document).ready(function() {
 var newText = getUrlParameter('eieiei');
